Working on Deposit Dashboard and Fixed some layout issues on smaller and larger screens

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap");
+@font-face {
+	font-family: 'DroidSans', sans-serif;
+	src: url('./assets/fonts/DroidSans-webfont.woff') format('woff') font-weight-normal,
+		 url("./assets/fonts/DroidSans-Bold-webfont.woff") format("woff") font-weight-bold;
+  }
 
 *,
 *::before,
@@ -15,7 +19,7 @@ html {
 
 body,
 body * {
-  font-family: "Arial", "Inter", sans-serif;
+  font-family: "DroidSans", sans-serif;
   font-stretch: normal;
   font-style: normal;
   font-size: 1.6rem;
